--- a/LUMARKET/src/Vistas/vista_usuario.fxml
+++ b/LUMARKET/src/Vistas/vista_usuario.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,129 +10,39 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane prefHeight="581.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controladores.controlador_principal">
+<BorderPane prefHeight="581.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controladores.controlador_usuario">
    <center>
       <AnchorPane id="AnchorPane" prefHeight="449.0" prefWidth="577.0">
          <children>
-            <AnchorPane layoutY="-2.0" prefHeight="429.0" prefWidth="616.0">
+            <AnchorPane layoutY="-2.0" prefHeight="429.0" prefWidth="718.0">
                <children>
                   <Pane layoutX="14.0" layoutY="67.0" prefHeight="131.0" prefWidth="558.0" style="-fx-background-color: #808080;" />
                   <Pane layoutX="611.0" layoutY="67.0" prefHeight="131.0" prefWidth="55.0" style="-fx-background-color: #808080;" />
-                  <HBox layoutY="280.0" prefHeight="107.0" prefWidth="690.0">
-                     <children>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <children>
-                              <ImageView fitHeight="46.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@Imagenes/Productos/imagen.jpg" />
-                                 </image>
-                              </ImageView>
-                              <Label contentDisplay="RIGHT" text="Producto">
-                                 <graphic>
-                                    <ToggleButton mnemonicParsing="false" text="♡" />
-                                 </graphic>
-                              </Label>
-                              <Label text="\$$$" />
-                           </children>
-                        </VBox>
-                     </children>
+                  <HBox fx:id="usercatalogo" layoutX="53.0" layoutY="268.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="621.0" spacing="20.0" style="-fx-border-color: #808080; -fx-background-radius: 25; -fx-border-radius: 25;">
+                     <padding>
+                        <Insets bottom="5.0" left="20.0" top="5.0" />
+                     </padding>
                   </HBox>
+                  <Button fx:id="atras" layoutY="325.0" mnemonicParsing="false" onAction="#retroceder" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="37.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Imagenes/Iconos/flechaizq.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="adelante" layoutX="675.0" layoutY="325.0" mnemonicParsing="false" onAction="#avanzar" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="38.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Imagenes/Iconos/flechader.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </AnchorPane>
          </children>
@@ -194,7 +102,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ed933a" height="28.0" layoutX="-16.0" layoutY="68.0" stroke="#ed933a" strokeType="INSIDE" width="716.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ed933a" height="28.0" layoutX="-16.0" layoutY="68.0" stroke="#ed933a" strokeType="INSIDE" width="747.0" />
                </children>
             </AnchorPane>
          </children>
