--- a/LUMARKET/src/Vistas/vista_carrito.fxml
+++ b/LUMARKET/src/Vistas/vista_carrito.fxml
@@ -74,20 +74,6 @@
          <children>
             <AnchorPane prefHeight="96.0" prefWidth="627.0">
                <children>
-                  <StackPane layoutX="184.0" layoutY="7.0" prefHeight="61.0" prefWidth="181.0">
-                     <children>
-                        <TextField prefHeight="25.0" prefWidth="233.0" promptText="Buscar productos" style="-fx-background-color: #fdf9f7; -fx-border-color: #e19143; -fx-border-width: 1.5; -fx-border-radius: 25; -fx-background-radius: 25; -fx-padding: 5;" />
-                        <Button accessibleRole="IMAGE_VIEW" mnemonicParsing="false" style="-fx-background-color: transparent;" StackPane.alignment="CENTER_RIGHT">
-                           <graphic>
-                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../Imagenes/Iconos/lupa.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                     </children>
-                  </StackPane>
                   <Button layoutX="642.0" layoutY="22.0" mnemonicParsing="false" onAction="#abrir" style="-fx-background-color: transparent;">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -136,6 +122,29 @@
                   </Button>
                </children>
             </AnchorPane>
+            <VBox layoutX="222.0" layoutY="-3.0" prefHeight="95.0" prefWidth="213.0">
+               <children>
+                  <StackPane prefHeight="87.0" prefWidth="213.0">
+                     <children>
+                        <TextField fx:id="busqueda" prefHeight="25.0" prefWidth="233.0" promptText="Buscar productos" style="-fx-background-color: #fdf9f7; -fx-border-color: #e19143; -fx-border-width: 1.5; -fx-border-radius: 25; -fx-background-radius: 25; -fx-padding: 5;" />
+                        <Button accessibleRole="IMAGE_VIEW" mnemonicParsing="false" style="-fx-background-color: transparent;" StackPane.alignment="CENTER_RIGHT">
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Imagenes/Iconos/lupa.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </StackPane>
+                  <ScrollPane fx:id="contenedor" fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="215.0" style="-fx-managed: false;" visible="false">
+                     <content>
+                        <VBox fx:id="resultados" onKeyReleased="#buscarcatalogo" prefHeight="200.0" prefWidth="212.0" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
    </top>
