--- a/LUMARKET/src/Vistas/vista_deseos.fxml
+++ b/LUMARKET/src/Vistas/vista_deseos.fxml
@@ -51,18 +51,6 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="37.0" prefWidth="127.0" style="-fx-background-color: #228b22; -fx-background-radius: 20; -fx-border-radius: 20;" text="Crear lista" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="30.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../Imagenes/Iconos/carpeta.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Button>
                      </children>
                   </HBox>
                   <HBox prefHeight="28.0" prefWidth="431.0">
@@ -70,10 +58,9 @@
                         <Insets />
                      </VBox.margin>
                      <children>
-                        <StackPane prefHeight="28.0" prefWidth="285.0" style="-fx-background-color: #ffffff;">
+                        <StackPane prefHeight="27.0" prefWidth="185.0" style="-fx-background-color: #ffffff;">
                            <children>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefHeight="29.0" prefWidth="45.0" style="-fx-background-color: transparent;" text="Listas" StackPane.alignment="TOP_RIGHT" />
-                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="84.0" style="-fx-background-color: transparent;" text="Mis favoritos" StackPane.alignment="TOP_LEFT" />
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="84.0" style="-fx-background-color: transparent;" text="Mis favoritos" StackPane.alignment="TOP_CENTER" />
                            </children>
                            <padding>
                               <Insets left="40.0" right="60.0" />
@@ -91,7 +78,7 @@
          </children></AnchorPane>
    </center>
    <bottom>
-      <Pane prefHeight="58.0" prefWidth="643.0" style="-fx-background-color: #D3A468;" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="58.0" prefWidth="643.0" style="-fx-background-color: F3E8DB;" BorderPane.alignment="CENTER" />
    </bottom>
    <top>
       <AnchorPane BorderPane.alignment="CENTER">
@@ -169,6 +156,15 @@
                   </ScrollPane>
                </children>
             </VBox>
+            <Button layoutX="673.0" layoutY="14.0" mnemonicParsing="false" onAction="#catalogo" prefHeight="25.0" prefWidth="25.0" style="-fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fitHeight="41.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Imagenes/Iconos/catalogo.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
    </top>
